--- a/Tayo-Backend/src/main/resources/application.yml
+++ b/Tayo-Backend/src/main/resources/application.yml
@@ -23,3 +23,11 @@ spring:
     url: jdbc:mysql://localhost:3306/tayotayo?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     username: root
     password: 1234
+
+spring.jpa:
+  database: mysql
+  hibernate.dialect: org.hibernate.dialect.MySQL8Dialect
+  hibernate.ddl-auto: create
+  #hibernate.ddl-auto: update
+  hibernate.format_sql: true
+  hibernate.show-sql: true
