Feat : S3 설정 및 테스트 완료
- 자동차 등록 시, 자동차 이미지 등록을 위한 S3 설정 완료
- 여러 개의 이미지 등록 가능하도록 구현

--- a/Tayo-Backend/build.gradle
+++ b/Tayo-Backend/build.gradle
@@ -58,6 +58,9 @@ dependencies {
 	implementation("commons-io:commons-io:2.11.0")
 	implementation("org.json:json:20230227")
 	implementation("org.hyperledger:indy:1.15.0")
+
+	// AWS-s3
+	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 }
 
 tasks.named('test') {
