--- a/Tayo-Backend/build.gradle
+++ b/Tayo-Backend/build.gradle
@@ -61,6 +61,13 @@ dependencies {
 
 	// AWS-s3
 	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+
+	//websocket
+	implementation 'org.springframework.boot:spring-boot-starter-websocket'
+	implementation 'org.webjars:sockjs-client:1.5.1'
+	implementation 'org.webjars:stomp-websocket:2.3.4'
+
+
 }
 
 tasks.named('test') {
