Feat : StompHandler 추가
- 클라이언트가 STOMP 메시지를 서버로 보냈을 때, Interceptor로 JWT 검증과 유저 접속상태 관리를 위해 StompHandler를 구현하고 WebSocketConfig를 통해 추가

--- a/Tayo-Backend/src/main/resources/application.yml
+++ b/Tayo-Backend/src/main/resources/application.yml
@@ -29,7 +29,7 @@ spring:
 spring.jpa:
   database: mysql
   hibernate.dialect: org.hibernate.dialect.MySQL8Dialect
-  hibernate.ddl-auto: create
+  hibernate.ddl-auto: update
   #hibernate.ddl-auto: update
   hibernate.format_sql: true
   hibernate.show-sql: true
