--- a/Tayo-Backend/src/main/resources/application.yml
+++ b/Tayo-Backend/src/main/resources/application.yml
@@ -34,17 +34,17 @@ spring.jpa:
   hibernate.format_sql: true
   hibernate.show-sql: true
 
-cloud:
-  aws:
-    s3:
-      bucket: ${TAYOTAYO_S3_NAME}
-    region:
-      static: ap-northeast-2
-    stack:
-      auto: false
-    credentials:
-      access-key: ${TAYOTAYO_S3_ACCESS_KEY}
-      secret-key: ${TAYOTAYO_S3_SECRET_KEY}
+#cloud:
+#  aws:
+#    s3:
+#      bucket: ${TAYOTAYO_S3_NAME}
+#    region:
+#      static: ap-northeast-2
+#    stack:
+#      auto: false
+#    credentials:
+#      access-key: ${TAYOTAYO_S3_ACCESS_KEY}
+#      secret-key: ${TAYOTAYO_S3_SECRET_KEY}
 
 VCService:
   issuer:
