Setting : s3 연결 주석 처리
실행 시 편하게 s3 연결하는 부분 주석 처리하였습니다.

--- a/Tayo-Backend/build.gradle
+++ b/Tayo-Backend/build.gradle
@@ -64,7 +64,7 @@ dependencies {
 	implementation 'io.grpc:grpc-netty-shaded:1.56.0'
 
 	// AWS-s3
-	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+	//implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 
 	//websocket
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
